# PI-CNC

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  build.sh  buildnew.sh  buttoninfo.h  clidisplay.cpp  clidisplay.h  cmake_install.cmake  cpheader.sh  displaycontroller.cpp  displaycontroller.h  echo  error.txt  file.h  gcode.cpp  gcode.h  gcodeinterface.h  gcodeparse.cpp  gcodeparse.h  globalcommunication.cpp  globalcommunication.h  hardwareplan.txt  install.sh  iocontroller.cpp  iocontroller.h  log.txt  machine.h  main.cpp  pi-cnc  positioncalc.cpp  programrun.cpp  programrun.h  raspi-io.h  stepper.cpp  stepper.h  tests.cpp  (+4 more)
clientcli/: clidisplay.cpp  clidisplay.h  clientmain.cpp
legacy_build/: build.sh
lib/glfw-3.4/: cmake_uninstall.cmake
service/: commands.h  gcode.h  gcodeinterface.cpp  gcodeparse.h  globalcommunication.cpp  install.sh  iocontroller.h  pi-cnc-server-io-service.service  positioncalc.h  programrun.h  servicemain.cpp  socketmanager.cpp  socketmanager.h  stepper.h
vfd/: motor.h  vfd.ino  vfdcommands.h
